# project-learnops

./: .env.age  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  build-and-push.sh  cliff.toml  commitlint.config.js  docker-compose.yaml  docker-compose.yml  encrypt-decrypt-env-file.sh  google.env  google.env.age  google.env.age.test  myNotes.py
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.job  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  seed_full_test.py  test_serialization.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_display_order_to_courses.py  003_add_is_active_to_questions.py  004_add_timestamps_to_quiz_and_question.py  004_fix_quiz_timestamps.py  005_add_unique_active_attempt.py  006_add_uq_attempt_question.py  007_remove_duration_seconds_default.py  007_rm_duration_default.py  (+3 more)
backend/app/: config.py  database.py  dependencies.py  deps.py  main.py  main.py.backup
backend/scripts/: db_update.py  seed_content.py  seed_quiz.py  validate_content.py
backend/tests/: conftest.py  test_auth.py  test_auth_dependency.py  test_auth_endpoints.py  test_courses_endpoints.py  test_dashboard.py  test_enrollment_progress.py  test_enrollments_endpoints.py  test_github_oauth.py  test_health.py  test_jwt.py  test_progress.py  test_quiz_results.py  test_quizzes_endpoints.py  test_rate_limiting.py  test_security.py  test_seed_quiz.py  test_unlink_oauth.py  test_users_delete_me.py  test_users_endpoints.py  test_validate_content.py
(+415 files in other folders)
